<?xml version="1.0" encoding="utf-8"?>
<!--
『Androidアプリ開発の教科書』
第11章
Web API連携サンプル

@author Shinzo SAITO

ファイル名=activity_main.xml
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="10dp"
		android:layout_weight="0.5"
		android:background="@color/white"
		android:orientation="vertical">

		<TextView
			android:id="@+id/tvWeatherTelop"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:textColor="@color/black"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/tvWeatherDesc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/blue_700"
			android:textSize="30sp" />

		<TextView
			android:id="@+id/tvLatitude"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:textColor="@color/black"
			android:textSize="20sp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:gravity="center|center_vertical"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/current_location"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:hint="@string/current_hint"
				android:textSize="22sp"
				android:textColor="@color/black"
				android:textColorHint="@color/grey" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="→"
				android:textColor="@color/black"
				android:textSize="20dp" />

			<EditText
				android:id="@+id/waypoint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:hint="@string/waypoint_hint"
				android:textSize="22sp"
				android:textColor="@color/black"
				android:textColorHint="@color/grey" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="→"
				android:textColor="@color/black"
				android:textSize="20dp" />

			<EditText
				android:id="@+id/destination"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:hint="@string/destination_hint"
				android:textSize="22sp"
				android:textColor="@color/black"
				android:textColorHint="@color/grey" />
		</LinearLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/line"
			android:textColor="@color/white" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:gravity="center|center_horizontal"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/info"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="40dp"
				android:layout_weight="1"
				android:textSize="10dp"
				android:gravity="center|center_vertical"
				android:text="@string/info" />
		</LinearLayout>

		<Button
			android:id="@+id/weatherButton"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="Weather"
			app:backgroundTint="#80D8FF" />

		<Button
			android:id="@+id/mapButton"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:onClick="onMapShowCurrentButtonClick"
			android:text="Map"
			app:backgroundTint="#DD448AFF" />

		<Button
			android:id="@+id/button"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:onClick="onSpotshow"
			android:text="Spot"
			app:backgroundTint="#2979FF" />

		<Button
			android:id="@+id/button2"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:onClick="showAppoint"
			android:text="Appoint"
			app:backgroundTint="#304FFE" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center|bottom">
			<ImageButton
				android:id="@+id/adv"
				android:layout_width="match_parent"
				android:layout_height="90dp"
				android:scaleType="fitCenter"
				android:padding="0dp"
				app:srcCompat="@drawable/advertise" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>